Bug #955: Help sidebar spacing fix.

--- a/wp-content/themes/citytech/style.css
+++ b/wp-content/themes/citytech/style.css
@@ -5587,7 +5587,7 @@ div #help-tags-copy,div #help-tags {
 
 #sidebar #support-team {
     margin:0 0 15px;
-    padding: 0 0 15px;
+    padding: 0 0 10px;
     border-top:1px solid #F0F0F0;
     border-bottom:1px solid #F0F0F0;
 }
@@ -5601,6 +5601,7 @@ div #help-tags-copy,div #help-tags {
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     font-weight: bold;
+    padding-bottom: 5px;
 }
 #sidebar #support-team #team-thumbs .thumb-wrapper {
     padding:0;
